[package]
name = "casefeed"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2", features = ["d1"] }
worker-macros = { version = "0.4.2" }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rss = "2.0"
chrono = "0.4"
court_api = { path = "../court_api" }
